<resources>
<!--    <string name="app_name">RokomariAssignment</string>-->
    <string name="app_name">NoteMe</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>


    <string name="submit">Submit</string>
    <string name="title_add_task">Add Tasks</string>
    <string name="title_edit_task">Edit Tasks</string>
    <string name="title_task_details">Task Details</string>
    <string name="task_name">Task Name</string>
    <string name="description">Write Description ........</string>
    <string name="txt_description">Description: </string>
    <string name="deadlines">Deadlines: </string>
    <string name="status">Status</string>
    <string name="created_date">Crated Date:</string>


    <string name="txt_open">Open</string>
    <string name="txt_in_progress">In-progress</string>
    <string name="txt_test">Test</string>
    <string name="txt_done">Done</string>

    <string name="txt_ok">Ok</string>



    <string name="txt_email">Email</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_url">Url</string>

    <string name="msg_success">Task Saved Sucessfully</string>
    <string name="msg_delete">Task Deleted successfully.</string>
    <string name="msg_update">Task Updated successfully.</string>

    <string name="enter_email">Enter E-mail</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_url">Enter Url</string>

    <string name="save_email">Save E-mail</string>
    <string name="save_phone">Save Phone</string>
    <string name="save_url">Save Url</string>

</resources>