<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:orientation="vertical" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_task_details"
                        android:gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:background="@color/tv_bg_color"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:textSize="25dp"
                        android:fontFamily="sans-serif-condensed"/>

                    <ImageButton
                        android:id="@+id/btnDelete"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:layout_gravity="right"
                        android:background="@drawable/icons8_delete" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/created_date" />

                        <TextView
                            android:id="@+id/tvCreatedDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:textColor="@color/error_color"
                            android:textStyle="bold"
                            android:text="@string/status" />

                        <TextView
                            android:id="@+id/tvStatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:textColor="@color/fab_color"
                            android:textStyle="bold"
                            android:text="" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTaskName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/task_name"
                        android:gravity="center_horizontal"
                        android:textColor="@color/error_color"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:textSize="25dp"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/txt_description" />

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/deadlines" />

                        <TextView
                            android:id="@+id/tvDeadlines"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="" />
                    </LinearLayout>


                    <include layout="@layout/email_phone_url_layout" />
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/fab_color"
                        android:layout_gravity="right"
                        android:layout_margin="10dp"
                        android:src="@drawable/icons8_edit_30" />



                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>