<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:weightSum="3">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnEmail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@drawable/ic_email"
                android:layout_gravity="center" />
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_margin="1dp"
                android:gravity="center"
                android:text="@string/txt_email"
                android:textStyle="bold"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnPhone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@drawable/ic_phone"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_margin="1dp"
                android:gravity="center"
                android:text="@string/txt_phone"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnUrl"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@drawable/ic_url"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:id="@+id/tvUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_margin="1dp"
                android:gravity="center"
                android:text="@string/txt_url"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </LinearLayout>







    </TableRow>

</LinearLayout>